[tool.poetry]
name = "webhook-utils"
version = "0.1.0"
description = "Short, well documented utilities for interacting with webhooks."
authors = ["Elijah Wilson <dev.tizz98@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tizz98/webhook-utils"
keywords = ["webhook", "utils", "utilities", "webhooks"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
pytest = "^6.2.5"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
pytest-spec = "^3.2.0"
pytest-xdist = {extras = ["psutil"], version = "^2.5.0"}
tox-gh-actions = "^2.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.black]
target-version = ['py38']
